fixed overlapping header buttons and the footer's UI

--- a/css/main.css
+++ b/css/main.css
@@ -618,7 +618,7 @@ input[type="text"], textarea {
 *************************************/
 
 footer {
-    background-color: rgb(51, 13, 53);
+    background-color: rgb(240, 80, 6);
     margin-top: 10rem;
     padding-top: 2rem; 
     bottom: 0;
@@ -642,6 +642,6 @@ footer {
 
 footer p {
     text-align: center;
-    color: rgb(240, 80, 6);
+    color: black;
     margin-top: 5%;
 }
